# lighterm

./: index.html  lighterm.rar  package-lock.json  package.json
.clinerules/: react-rule.md  tauri-react-rule.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hotkeys.rs  lib.rs  main.rs  sysinfo.rs  theme.rs
src/components/common/: AppIcon.tsx  IconButton.tsx  Logo.tsx
src/components/layout/: Layout.tsx
src/components/settings/: SettingsContent.tsx  SettingsHeader.tsx  SettingsItem.tsx  SettingsPage.tsx  SettingsSidebar.tsx
src/components/tabs/: TabActions.tsx  TabBar.tsx
src/components/terminal/: TerminalContent.tsx  TerminalFooter.tsx  TerminalTabs.tsx
src/components/window/: WindowControls.tsx  WindowTitlebar.tsx
src/context/: SettingsContext.tsx  TerminalContext.tsx  WindowControlContext.tsx
src/styles/: app-icon.css  global.css  settings.css  tabs.css  terminal.css  theme.css  variables.css  window-controls.css  window-titlebar.css
src/types/: index.ts
