[package]
name = "Lighterm"
version = "0.1.0"
description = "yet another light weight terminal"
authors = ["Magic"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lighterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.34.2"
once_cell = "1.21.3"
windows = { version = "0.48", features = ["Win32_UI_Shell", "Win32_Foundation"] }
global-hotkey = "0.2.3"
